# bibifi-code

./: .gitignore  LICENSE  README.md  stack.yaml
bibifi-core/: bibifi-core.cabal  stack.yaml
bibifi-periodic/: periodic.py
bibifi-runner/: README.md  bibifi-runner.cabal  stack.yaml
bibifi-translator/: Common.hs  Dump.hs  Extract.hs  Makefile  (+13 more)
bibifi-webapp/: .gitignore  Admin.hs  Application.hs  BreakSubmissions.hs  Cache.hs  Common.hs  Config.hs  Contest.hs  Coursera.hs  Css.hs  FixSubmissions.hs  Forms.hs  Foundation.hs  Import.hs  Judges.hs  LYesod.hs  Makefile  Participation.hs  Profile.hs  RateLimit.hs  Settings.hs  Sponsors.hs  Submissions.hs  TCB.hs  Team.hs  Test.hs  User.hs  Widgets.hs  Winners.hs  bibifi.cabal  devel.hs  stack.yaml
bibifi-webapp/Bench/: Safe.hs  Unsafe.hs
bibifi-webapp/Contest/: Edit.hs
bibifi-webapp/Forms/: Survey.hs
bibifi-webapp/Foundation/: App.hs
bibifi-webapp/Handler/: About.hs  Admin.hs  Announcements.hs  Confirmation.hs  ContestSignup.hs  Contests.hs  CreateTeam.hs  Details.hs  DownloadFile.hs  Feedback.hs  Judges.hs  Participation.hs  PasswordReset.hs  PerformanceRankings.hs  Profile.hs  Register.hs  Rules.hs  Scoreboard.hs  Splash.hs  Sponsorship.hs  Support.hs  Team.hs  TeamInvitation.hs  Thanks.hs  Todo.hs
bibifi-webapp/Handler/Admin/: AddAnnouncement.hs  Announcement.hs  Announcements.hs  Contest.hs  Contests.hs  Team.hs  Teams.hs  User.hs  Users.hs
bibifi-webapp/Handler/Admin/Contest/: BreakSubmissions.hs  BuildSubmissions.hs  Create.hs  Edit.hs  FixSubmissions.hs  JudgeEmails.hs  Judgements.hs  MakeDefault.hs  MakeJudge.hs  OracleBreaks.hs  ParticipantEmails.hs  Teams.hs  Tests.hs
bibifi-webapp/Handler/Admin/Contest/Judgements/: AssignBreak.hs  AssignBuild.hs  AssignFix.hs
bibifi-webapp/Handler/Admin/Contest/OracleBreaks/: Create.hs  Edit.hs
bibifi-webapp/Handler/Admin/Contest/Tests/: Correctness.hs  CreateCorrectness.hs  CreateOptional.hs  CreatePerformance.hs  Optional.hs  Performance.hs
bibifi-webapp/Handler/Admin/Team/: AddMember.hs  Member.hs
bibifi-webapp/Handler/Admin/User/: ResetPassword.hs  SetAdmin.hs
bibifi-webapp/Handler/Contest/: Participation.hs
bibifi-webapp/Handler/Judges/: BreakIt.hs  BuildIt.hs  FixIt.hs
bibifi-webapp/Handler/Participation/: BreakSubmissions.hs  BuildSubmissions.hs  BuildersCode.hs  DownloadBuilder.hs  FixSubmissions.hs  Information.hs  OracleSubmissions.hs
bibifi-webapp/Handler/Participation/BreakSubmissions/: Download.hs
bibifi-webapp/Handler/Participation/OracleSubmissions/: Create.hs
bibifi-webapp/Handler/Profile/: Account.hs  Teams.hs
bibifi-webapp/Handler/Profile/Account/: Edit.hs  Upload.hs
bibifi-webapp/Handler/Team/: AddMembers.hs  Information.hs  Leave.hs  Participation.hs
bibifi-webapp/Handler/Webhook/Gitlab/: Push.hs
bibifi-webapp/Settings/: Judges.hs
bibifi-webapp/Yesod/Auth/OAuth2/: Coursera.hs
bibifi-webapp/app/: main.hs
bibifi-webapp/config/: cloud.yml  keter.yaml  routes
bibifi-webapp/deploy/: Procfile
bibifi-webapp/static/css/: bootstrap-tokenfield.min.css  jquery-ui.css  langdon.css
bibifi-webapp/static/doc/code/fall2014/: 19.tar  21.tar  35.tar  46.tar  47.tar  57.tar  68.tar  69.tar  78.tar
bibifi-webapp/static/doc/fall2016/: 1.sh  2.sh  3.sh  break.html  fix.html  index.html
bibifi-webapp/static/doc/spring2015/spec/: EXAMPLES.html  LOGAPPEND.html  LOGREAD.html  SCORE.html  SPEC.html  VM.html
bibifi-webapp/static/fonts/: langdon.eot
bibifi-webapp/static/js/: bibifi.scoreboard.js  bootstrap-tokenfield.js  d3.v3.min.js  jquery.datetimepicker.full.min.js
dependencies/aws-sdk/: .gitignore  .travis.yml  LICENSE  README.md  aws-sdk.cabal  ec2api.csv
dependencies/aws-sdk/Cloud/: AWS.hs
dependencies/aws-sdk/Cloud/AWS/: Class.hs  CloudWatch.hs  Credential.hs  EC2.hs  ELB.hs  RDS.hs  Util.hs
dependencies/aws-sdk/Cloud/AWS/CloudWatch/: Alarm.hs  Internal.hs  Metric.hs  Types.hs
dependencies/aws-sdk/Cloud/AWS/EC2/: Acl.hs  Address.hs  AvailabilityZone.hs  ConversionTask.hs  Image.hs  Instance.hs  Internal.hs  KeyPair.hs  Metadata.hs  NetworkInterface.hs  NetworkInterfaceAttribute.hs  Params.hs  PlacementGroup.hs  Query.hs  Region.hs  Route.hs  RouteTable.hs  SecurityGroup.hs  Snapshot.hs  Subnets.hs  Tag.hs  Types.hs  Util.hs  VPC.hs  Volume.hs
dependencies/aws-sdk/Cloud/AWS/EC2/Types/: Acl.hs  Address.hs  AvailabilityZone.hs  Common.hs  ConversionTask.hs  Image.hs  Instance.hs  KeyPair.hs  NetworkInterface.hs  PlacementGroup.hs  Region.hs  Route.hs  RouteTable.hs  SecurityGroup.hs  Snapshot.hs  SpotInstance.hs  Subnets.hs  Tag.hs  VPC.hs  Volume.hs
dependencies/aws-sdk/Cloud/AWS/ELB/: Internal.hs  LoadBalancer.hs  Types.hs
dependencies/aws-sdk/Cloud/AWS/Lib/: Parser.hs  Query.hs
dependencies/aws-sdk/Cloud/AWS/RDS/: DBInstance.hs  DBParameterGroup.hs  DBSecurityGroup.hs  DBSnapshot.hs  DBSubnetGroup.hs  Event.hs  EventSubscription.hs  Internal.hs  OptionGroup.hs  Tag.hs  Types.hs  Util.hs
dependencies/aws-sdk/Cloud/AWS/RDS/Types/: DBInstance.hs  DBParameterGroup.hs  DBSecurityGroup.hs  DBSnapshot.hs  DBSubnetGroup.hs  Event.hs  EventSubscription.hs  OptionGroup.hs  Tag.hs
dependencies/aws-sdk/example/: Example.hs
dependencies/aws-sdk/test/: CloudWatchTests.hs  EC2Tests.hs  ELBTests.hs  RDSTests.hs  Util.hs  VPCTests.hs
dependencies/aws-sdk/test/CloudWatchTests/: AlarmTests.hs  MetricTests.hs  Util.hs
dependencies/aws-sdk/test/EC2Tests/: AclTests.hs  AddressTests.hs  AvailabilityZoneTests.hs  ConversionTaskTests.hs  ImageTests.hs  InstanceTests.hs  KeyPairTests.hs  NetworkInterfaceAttributeTests.hs  NetworkInterfaceTests.hs  PlacementGroupTests.hs  RegionTests.hs  RouteTableTests.hs  RouteTests.hs  SecurityGroupTests.hs  SnapshotTests.hs  SubnetsTests.hs  TagTests.hs  Util.hs  VPCTests.hs  VolumeTests.hs
dependencies/aws-sdk/test/ELBTests/: LoadBalancerTests.hs  Util.hs
dependencies/aws-sdk/test/RDSTests/: DBInstanceTests.hs  DBParameterGroupTests.hs  DBSecurityGroupTests.hs  DBSnapshotTests.hs  DBSubnetGroupTests.hs  EventSubscriptionTests.hs  EventTests.hs  OptionGroupTests.hs  TagTests.hs  Util.hs
(+49 files in other folders)
