name:              bibifi
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Admin
                     BreakSubmissions
                     Cache
                     Common
                     Config
                     Contest
                     Contest.Edit
                     Coursera
                     Css
                     FixSubmissions
                     Forms
                     Foundation
                     Import
                     Judges
                     LYesod
--                     Model
                     Participation
--                     PostDependencyType
                     Profile
                     RateLimit
                     Settings
                     Settings.Development
                     Settings.Judges
                     Settings.StaticFiles
                     Sponsors
                     Team
                     TCB
                     User
                     Widgets
                     Winners
                     Handler.Admin
                     Handler.Admin.Announcements
                     Handler.Admin.AddAnnouncement
                     Handler.Admin.Contests
                     Handler.Admin.Contest
                     Handler.Admin.Contest.Create
                     Handler.Admin.Contest.Edit
                     Handler.Admin.Contest.JudgeEmails
                     Handler.Admin.Contest.Judgements
                     Handler.Admin.Contest.Judgements.AssignBuild
                     Handler.Admin.Contest.Judgements.AssignBreak
                     Handler.Admin.Contest.Judgements.AssignFix
                     Handler.Admin.Contest.MakeDefault
                     Handler.Admin.Contest.OracleBreaks
                     Handler.Admin.Contest.OracleBreaks.Create
                     Handler.Admin.Contest.OracleBreaks.Edit
                     Handler.Admin.Contest.ParticipantEmails
                     Handler.Admin.Contest.Tests
                     Handler.Admin.Contest.Tests.CreateCorrectness
                     Handler.Admin.Contest.Tests.CreateOptional
                     Handler.Admin.Contest.Tests.CreatePerformance
                     Handler.Admin.Contest.Tests.Correctness
                     Handler.Admin.Contest.Tests.Optional
                     Handler.Admin.Contest.Tests.Performance
                     Handler.Admin.Users
                     Handler.Admin.User
                     Handler.Admin.User.ResetPassword
                     Handler.Announcements
                     Handler.Scoreboard
                     Handler.Contests
                     Handler.Contest.Participation
                     Handler.Details
                     Handler.DownloadFile
                     Handler.Judges
                     Handler.Judges.BuildIt
                     Handler.Judges.BreakIt
                     Handler.Judges.FixIt
                     Handler.Register
                     Handler.Confirmation
                     Handler.Participation
                     Handler.Participation.Information
                     Handler.Participation.OracleSubmissions
                     Handler.Participation.OracleSubmissions.Create
                     Handler.Participation.BuildSubmissions
                     Handler.Participation.BuildersCode
                     Handler.Participation.BreakSubmissions
                     Handler.Participation.FixSubmissions
                     Handler.PasswordReset
                     Handler.PerformanceRankings
                     Handler.Profile
                     Handler.Profile.Account
                     Handler.Profile.Account.Edit
                     Handler.Profile.Account.Upload
                     Handler.Profile.Teams
                     Handler.ContestSignup
                     Handler.Team
                     Handler.CreateTeam
                     Handler.Team.AddMembers
                     Handler.Team.Information
                     Handler.Team.Leave
                     Handler.Team.Participation
                     Handler.TeamInvitation
                     Handler.Thanks
                     Handler.Splash
                     Handler.Sponsorship
                     Handler.Support
                     Handler.Feedback
                     Handler.Todo
                     Network.Wai.Middleware.ForceDomain
                     Test
                     Forms.Survey
                     Yesod.Auth.OAuth2.Coursera

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0 -fno-warn-name-shadowing
    else
        ghc-options:   -Wall -O2 -fno-warn-name-shadowing

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                DoAndIfThenElse
                RecordWildCards
                ScopedTypeVariables

    build-depends: base                          >= 4          && < 5
--                 , yesod-platform              
                 , yesod                         
                 , yesod-core                    
                 , yesod-auth                    
                 , yesod-auth-hashdb             
                 , yesod-static                  
                 , yesod-form                    
                 , vector
                 , bytestring                     
                 , data-textual
                 , network                       
                 , network-ip
                 , persistent                    
                 , persistent-ratelimit          
                 , persistent-postgresql         
                 , persistent-template          
                 , template-haskell
                 , text                          
                 , transformers
                 , enclosed-exceptions
                 , hamlet                        
                 , hashable                      
                 , hashmap                       
                 , http-client
                 , shakespeare                   
--                 , shakespeare-css             
--                 , shakespeare-js              
--                 , shakespeare-text            
                 , hjsmin                        
                 , monad-control                 
                 , mtl
                 , wai                           
                 , wai-extra                     
                 , yaml                          
                 , http-conduit                  
                 , directory                     
                 , warp                          
                 , data-default
                 , filepath                      
                 , aeson
                 , aeson-pretty
                 , conduit                       
                 , conduit-extra                 
                 , monad-logger                  
                 , resourcet                     
                 , fast-logger                   
                 , time
                 , old-locale
                 , wai-logger                    
                 , MonadRandom
                 , esqueleto
                 , blaze-markup
                 , blaze-html
                 , mime-mail
                 , containers
                 , hoauth2 > 0.4.3
                 , yesod-auth-oauth2
                 , lmonad
                 , lmonad-yesod
                 , transformers
                 , wai-extra
                 , yesod-static
                 , markdown
                 , bibifi-core

                 , http-types

executable         bibifi
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , bibifi
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , bibifi
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
