name:                aws-sdk
version:             1.0.0
synopsis:            AWS SDK for Haskell
description: AWS (Amazon Web Services) sdk for Haskell.
             .
             This library closesly follows the official sdk.
             To find more documentation, you can lookup functions in the official sdk docs for other languages:
             <http://docs.amazonwebservices.com/AWSJavaSDK/latest/javadoc/com/amazonaws/services/ec2/model/DescribeInstancesRequest.html>

license:             BSD3
license-file:        LICENSE
author:              Yusuke Nomura <yunomu@gmail.com>
                   , Seizan Shimazaki <seizans@gmail.com>
                   , Daisuke Matsumoto <dai@daimatz.net>
                   , Shohei Yasutake <amutake.s@gmail.com>
                   , eagletmt <eagletmt@gmail.com>
                   , HATATANI Shinta <gamaguchi@gmail.com>
maintainer:          Yusuke Nomura <yunomu@gmail.com>
homepage:            https://github.com/worksap-ate/aws-sdk
copyright:           AWS SDK for Haskell Developers
category:            Cloud, AWS, Distributed Computing
build-type:          Simple
cabal-version:       >=1.8

flag debug
    description: enable debug logging
    default: False

library
  exposed-modules:   Cloud.AWS
                   , Cloud.AWS.Class
                   , Cloud.AWS.EC2
                   , Cloud.AWS.EC2.Types
                   , Cloud.AWS.EC2.Util
                   , Cloud.AWS.EC2.Metadata
                   , Cloud.AWS.RDS
                   , Cloud.AWS.RDS.Types
                   , Cloud.AWS.RDS.Util
                   , Cloud.AWS.ELB
                   , Cloud.AWS.ELB.Types
                   , Cloud.AWS.CloudWatch
                   , Cloud.AWS.CloudWatch.Types
  other-modules:     Cloud.AWS.Util
                   , Cloud.AWS.Credential
                   , Cloud.AWS.EC2.Internal
                   , Cloud.AWS.EC2.Address
                   , Cloud.AWS.EC2.AvailabilityZone
                   , Cloud.AWS.EC2.ConversionTask
                   , Cloud.AWS.EC2.Image
                   , Cloud.AWS.EC2.Instance
                   , Cloud.AWS.EC2.Volume
                   , Cloud.AWS.EC2.KeyPair
                   , Cloud.AWS.EC2.Route
                   , Cloud.AWS.EC2.RouteTable
                   , Cloud.AWS.EC2.Snapshot
                   , Cloud.AWS.EC2.SecurityGroup
                   , Cloud.AWS.EC2.Subnets
                   , Cloud.AWS.EC2.Query
                   , Cloud.AWS.EC2.Region
                   , Cloud.AWS.EC2.VPC
                   , Cloud.AWS.EC2.Acl
                   , Cloud.AWS.EC2.NetworkInterface
                   , Cloud.AWS.EC2.NetworkInterfaceAttribute
                   , Cloud.AWS.EC2.Tag
                   , Cloud.AWS.EC2.Params
                   , Cloud.AWS.EC2.PlacementGroup
                   , Cloud.AWS.EC2.Types.Acl
                   , Cloud.AWS.EC2.Types.Address
                   , Cloud.AWS.EC2.Types.AvailabilityZone
                   , Cloud.AWS.EC2.Types.ConversionTask
                   , Cloud.AWS.EC2.Types.Common
                   , Cloud.AWS.EC2.Types.Image
                   , Cloud.AWS.EC2.Types.Instance
                   , Cloud.AWS.EC2.Types.KeyPair
                   , Cloud.AWS.EC2.Types.NetworkInterface
                   , Cloud.AWS.EC2.Types.PlacementGroup
                   , Cloud.AWS.EC2.Types.Region
                   , Cloud.AWS.EC2.Types.Route
                   , Cloud.AWS.EC2.Types.RouteTable
                   , Cloud.AWS.EC2.Types.SecurityGroup
                   , Cloud.AWS.EC2.Types.Snapshot
                   , Cloud.AWS.EC2.Types.SpotInstance
                   , Cloud.AWS.EC2.Types.Subnets
                   , Cloud.AWS.EC2.Types.Tag
                   , Cloud.AWS.EC2.Types.VPC
                   , Cloud.AWS.EC2.Types.Volume
                   , Cloud.AWS.Lib.Parser
                   , Cloud.AWS.Lib.Query
                   , Cloud.AWS.RDS.Internal
                   , Cloud.AWS.RDS.DBInstance
                   , Cloud.AWS.RDS.DBParameterGroup
                   , Cloud.AWS.RDS.DBSecurityGroup
                   , Cloud.AWS.RDS.DBSnapshot
                   , Cloud.AWS.RDS.DBSubnetGroup
                   , Cloud.AWS.RDS.Event
                   , Cloud.AWS.RDS.EventSubscription
                   , Cloud.AWS.RDS.OptionGroup
                   , Cloud.AWS.RDS.Tag
                   , Cloud.AWS.RDS.Types.DBInstance
                   , Cloud.AWS.RDS.Types.DBParameterGroup
                   , Cloud.AWS.RDS.Types.DBSecurityGroup
                   , Cloud.AWS.RDS.Types.DBSnapshot
                   , Cloud.AWS.RDS.Types.DBSubnetGroup
                   , Cloud.AWS.RDS.Types.Event
                   , Cloud.AWS.RDS.Types.EventSubscription
                   , Cloud.AWS.RDS.Types.OptionGroup
                   , Cloud.AWS.RDS.Types.Tag
                   , Cloud.AWS.ELB.Internal
                   , Cloud.AWS.ELB.LoadBalancer
                   , Cloud.AWS.CloudWatch.Internal
                   , Cloud.AWS.CloudWatch.Metric
                   , Cloud.AWS.CloudWatch.Alarm
  ghc-options:       -Wall
                     -fno-warn-unused-do-bind
  if flag(debug)
      cpp-options: -DDEBUG

  extensions: OverloadedStrings
  build-depends:     base >= 4 && < 5
                   , containers
                   , SHA
                   , base64-bytestring >= 1.0.0.0
                   , bytestring
                   , http-types
                   , conduit >= 1.1.0
                   , conduit-extra >= 1.1.0
                   , resourcet >= 1.1.0
                   , transformers
                   , time
                   , old-locale
                   , http-conduit >= 2.0.0
                   , xml-conduit >= 1.1.0.3
                   , xml-types
                   , text
                   , monad-control >= 1.0.0.0
                   , safe
                   , simple-config >= 1.1.1.0
                   , parsec
                   , mtl
                   , lifted-base
                   , transformers-base
                   , strptime
                   , template-haskell
                   , parallel
                   , iproute >= 1.2.9
                   , tls
                   , filepath
                   , directory
                   , io-choice
                   , ec2-signature >= 3.1
                   , aws-sdk-text-converter >=0.3
                   , aws-sdk-xml-unordered ==0.3.*

source-repository head
    type:            git
    location:        git://github.com/worksap-ate/aws-sdk.git

test-suite test-ec2
    type:              exitcode-stdio-1.0
    main-is:           EC2Tests.hs
    hs-source-dirs:    test
    ghc-options:       -Wall
                       -threaded
                       -fno-warn-unused-do-bind
    extensions: OverloadedStrings
    build-depends: base
                 , aws-sdk
                 , conduit
                 , resourcet
                 , text
                 , transformers
                 , hspec
                 , QuickCheck
                 , HUnit
                 , lifted-base
                 , iproute
                 , time
                 , random
                 , bytestring
                 , base64-bytestring
                 , certificate
                 , crypto-random
                 , crypto-pubkey

test-suite test-vpc
    type:              exitcode-stdio-1.0
    main-is:           VPCTests.hs
    hs-source-dirs:    test
    ghc-options:       -Wall
                       -threaded
                       -fno-warn-unused-do-bind
    extensions: OverloadedStrings
    build-depends: base
                 , aws-sdk
                 , conduit
                 , resourcet
                 , text
                 , transformers
                 , hspec
                 , QuickCheck
                 , HUnit
                 , lifted-base
                 , iproute
                 , time
                 , random
                 , bytestring
                 , base64-bytestring
                 , certificate
                 , crypto-random
                 , crypto-pubkey

test-suite test-rds
    type:              exitcode-stdio-1.0
    main-is:           RDSTests.hs
    hs-source-dirs:    test
    ghc-options:       -Wall
                       -threaded
                       -fno-warn-unused-do-bind
    extensions: OverloadedStrings
    build-depends: base
                 , aws-sdk
                 , conduit
                 , resourcet
                 , text
                 , transformers
                 , hspec
                 , QuickCheck
                 , HUnit
                 , lifted-base
                 , iproute
                 , time
                 , random
                 , certificate
                 , crypto-random
                 , crypto-pubkey

test-suite test-elb
    type:              exitcode-stdio-1.0
    main-is:           ELBTests.hs
    hs-source-dirs:    test
    ghc-options:       -Wall
                       -threaded
                       -fno-warn-unused-do-bind
    extensions: OverloadedStrings
    build-depends: base
                 , aws-sdk
                 , conduit
                 , resourcet
                 , text
                 , transformers
                 , hspec
                 , QuickCheck
                 , HUnit
                 , lifted-base
                 , iproute
                 , time
                 , random
                 , certificate
                 , crypto-random
                 , crypto-pubkey

test-suite test-cw
    type:              exitcode-stdio-1.0
    main-is:           CloudWatchTests.hs
    hs-source-dirs:    test
    ghc-options:       -Wall
                       -threaded
                       -fno-warn-unused-do-bind
    extensions: OverloadedStrings
    build-depends: base
                 , aws-sdk
                 , conduit
                 , resourcet
                 , text
                 , transformers
                 , hspec
                 , QuickCheck
                 , HUnit
                 , lifted-base
                 , iproute
                 , time
                 , random
                 , certificate
                 , crypto-random
                 , crypto-pubkey
